--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -653,6 +653,17 @@ footer.sticky-bottom {
       font-size: 1.5rem;
     }
   }
+  
+  h2.year {
+    //color: var(--global-divider-color);
+    color: $grey-color;
+    //border-top: 1px solid var(--global-divider-color);
+    border-top: 1px solid $grey-color;
+    padding-top: 1rem;
+    margin-top: 2rem;
+    margin-bottom: -2rem;
+    text-align: right;
+  }
 
   h2.bibliography {
     color: var(--global-divider-color);
