--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -653,8 +653,8 @@ footer.sticky-bottom {
       font-size: 1.5rem;
     }
   }
-  
-  h2.year {
+
+  h2.bibliography {
     //color: var(--global-divider-color);
     color: $grey-color;
     //border-top: 1px solid var(--global-divider-color);
@@ -665,14 +665,14 @@ footer.sticky-bottom {
     text-align: right;
   }
 
-  h2.bibliography {
-    color: var(--global-divider-color);
-    border-top: 1px solid var(--global-divider-color);
-    padding-top: 1rem;
-    margin-top: 2rem;
-    margin-bottom: -2rem;
-    text-align: right;
-  }
+  // h2.bibliography {
+  //   color: var(--global-divider-color);
+  //   border-top: 1px solid var(--global-divider-color);
+  //   padding-top: 1rem;
+  //   margin-top: 2rem;
+  //   margin-bottom: -2rem;
+  //   text-align: right;
+  // }
 
   ol.bibliography {
     list-style: none;
