--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -666,8 +666,8 @@ footer.sticky-bottom {
   // }
 
   h2.bibliography {
-    color: var(--global-divider-color);
-    border-top: 1px solid var(--global-divider-color);
+    color: $grey-color;
+    border-top: 1px solid $grey-color;
     padding-top: 1rem;
     margin-top: 2rem;
     margin-bottom: -2rem;
