--- a/_layouts/bib.liquid
+++ b/_layouts/bib.liquid
@@ -86,8 +86,7 @@
               {{ author.last -}}
             </a>
           {% else %}
-            {{ author.first }}
-            {{ author.last }}
+            {{ author.first }} {{ author.last }}
           {% endif %}
         {% endif %}
       {% endfor %}
