--- a/_layouts/bib.liquid
+++ b/_layouts/bib.liquid
@@ -72,7 +72,7 @@
 
         {% if forloop.length == 1 %}
           {% if author_is_self %}
-            <em>{{author.first}} {{author.last}}</em>{%- endif -%}
+            <em>{{author.first}} {{author.last}}</em>
           {% else %}
             {{author.first}} {{author.last}}
           {% endif %}
@@ -95,7 +95,7 @@
               <em>{{author.first}} {{auhtor.last}}</em>
             {% else %}
               {% if coauthor_url %}
-                <a href="{{coauthor_url}}">{{author.first}} {{author.last}}{% endif %}</a>
+                <a href="{{coauthor_url}}">{{author.first}} {{author.last}}</a>
               {% else %}
                 {{author.first}} {{author.last}}
               {% endif %}
