--- a/_includes/resume/basics.liquid
+++ b/_includes/resume/basics.liquid
@@ -20,7 +20,9 @@
         {% elsif content[0] == 'phone' %}
           <a href="tel:{{ content[1] }}">{{ content[1] }}</a>
         {% else %}
-          {{ content[1] }}
+          {% assign bullets = content[1] | split: ';' %}
+          {% for bullet in bullets %}
+            <li>{{ bullet }}</li>
         {% endif %}
       </td>
     </tr>
