--- a/_layouts/bib.liquid
+++ b/_layouts/bib.liquid
@@ -86,7 +86,7 @@
                 {{ author.last -}}
                 </a>
               {% else %}
-                {{ author.first }} {{ author.last }},&nbsp
+                {{ author.first }} {{ author.last }},&nbsp;
               {% endif %}
             {% endif %}
           {% else %}
