--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -710,6 +710,8 @@ footer.sticky-bottom {
         .award {
           color: var(--global-theme-color) !important;
           border: 1px solid var(--global-theme-color);
+          padding-left: 0.75rem;
+          padding-right: 0.75rem;
         }
       }
 
