--- a/_layouts/bib.liquid
+++ b/_layouts/bib.liquid
@@ -34,6 +34,12 @@
         {% else %}
           <abbr class="badge">{{ entry.abbr }}</abbr>
         {% endif %}
+        {% if entry.award %}
+          <span class="award badge">{{entry.award}}</span>
+        {% endif %}
+        {% if entry.award2 %}
+          <span class="award badge">{{entry.award2}}</span>
+        {% endif %}
       {% endif %}
     </div>
   {% endif %}
