--- a/_includes/resume/basics.liquid
+++ b/_includes/resume/basics.liquid
@@ -20,13 +20,7 @@
         {% elsif content[0] == 'phone' %}
           <a href="tel:{{ content[1] }}">{{ content[1] }}</a>
         {% else %}
-          <ul>
-            {% assign btext = content[1] %}
-            {% assign bullets = btext | split: ';' %}
-            {% for bullet in bullets %}
-              <li>{{ bullet }}</li>
-            {% endfor %}
-          </ul>
+          {{ content[1] }}
         {% endif %}
       </td>
     </tr>
