--- a/_includes/resume/work.liquid
+++ b/_includes/resume/work.liquid
@@ -19,7 +19,14 @@
             <a href="{{ content.url }}">{{ content.position }}</a>
           </h6>
           <h6 class="ml-1 ml-md-4" style="font-size: 0.95rem">{{ content.name }}</h6>
-          <h6 class="ml-1 ml-md-4" style="font-size: 0.95rem; font-style: italic">{{ content.summary }}</h6>
+          <h6 class="ml-1 ml-md-4" style="font-size: 0.95rem; font-style: italic">
+            <ul>
+              {% assign bullets = content.summary | split: ';' %}
+              {% for bullet in bullets %}
+                <li>{{ bullet }}</li>
+              {% endfor %}
+            </ul>
+          </h6>
           <ul class="items">
             {% for item in content.highlights %}
               <li>
