--- a/_includes/resume/work.liquid
+++ b/_includes/resume/work.liquid
@@ -19,7 +19,7 @@
             <a href="{{ content.url }}">{{ content.position }}</a>
           </h6>
           <h6 class="ml-1 ml-md-4" style="font-size: 0.95rem">{{ content.name }}</h6>
-          <h6 class="ml-1 ml-md-4" style="font-size: 0.95rem; font-style: italic">
+          <h6 class="ml-1 ml-md-4" style="font-size: 0.95rem;">
             <ul>
               {% assign bullets = content.summary | split: ';' %}
               {% for bullet in bullets %}
