--- a/_includes/resume/work.liquid
+++ b/_includes/resume/work.liquid
@@ -29,9 +29,7 @@
           </h6>
           <ul class="items">
             {% for item in content.highlights %}
-              <li>
-                <span class="item">{{ item }}</span>
-              </li>
+                <span class="item"><strong>{{ item }}</strong></span>
             {% endfor %}
           </ul>
         </div>
