--- a/_layouts/cv.liquid
+++ b/_layouts/cv.liquid
@@ -88,24 +88,24 @@ layout: default
                   {% include resume/education.liquid %}
                 {% when 'work' %}
                   {% include resume/work.liquid %}
-                {% when 'volunteer' %}
-                  {% include resume/volunteer.liquid %}
+                {% comment %} {% when 'volunteer' %}
+                  {% include resume/volunteer.liquid %} {% endcomment %}
                 {% when 'projects' %}
                   {% include resume/projects.liquid %}
                 {% when 'awards' %}
                   {% include resume/awards.liquid %}
                 {% when 'skills' %}
                   {% include resume/skills.liquid %}
-                {% when 'publications' %}
-                  {% include resume/publications.liquid %}
+                {% comment %} {% when 'publications' %}
+                  {% include resume/publications.liquid %} {% endcomment %}
                 {% when 'languages' %}
                   {% include resume/languages.liquid %}
-                {% when 'interests' %}
-                  {% include resume/interests.liquid %}
-                {% when 'certificates' %}
-                  {% include resume/certificates.liquid %}
-                {% when 'references' %}
-                  {% include resume/references.liquid %}
+                {% comment %} {% when 'interests' %}
+                  {% include resume/interests.liquid %} {% endcomment %}
+                {% comment %} {% when 'certificates' %}
+                  {% include resume/certificates.liquid %} {% endcomment %}
+                {% comment %} {% when 'references' %}
+                  {% include resume/references.liquid %} {% endcomment %}
                 {% else %}
 
               {% endcase %}
