--- a/_layouts/cv.liquid
+++ b/_layouts/cv.liquid
@@ -76,7 +76,8 @@ layout: default
               {% continue %}
             {% endunless %}
           {% endif %}
-          {% if data[0] == 'meta' or data[1].size == 0 %} {% continue %} {% endif %}
+          {% assign omit = 'volunteer,projects,publications,interests,certificates,references' | split: "," %}
+          {% if omit contains data[0] or data[0] == 'meta' or data[1].size == 0 %} {% continue %} {% endif %}
           <a class="anchor" id="{{ data[0] }}"></a>
           <div class="card mt-3 p-3">
             <h3 class="card-title font-weight-medium">{{ data[0] | capitalize }}</h3>
