--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -624,8 +624,8 @@ footer.sticky-bottom {
   }
 
   h2.category {
-    color: var(--global-divider-color);
-    border-bottom: 1px solid var(--global-divider-color);
+    color: $grey-color;
+    border-bottom: 1px solid $grey-color;
     padding-top: 0.5rem;
     margin-top: 2rem;
     margin-bottom: 1rem;
