--- a/_layouts/cv.liquid
+++ b/_layouts/cv.liquid
@@ -87,7 +87,7 @@ layout: default
                   {% include resume/basics.liquid %}
                 {% when 'education' %}
                   {% include resume/education.liquid %}
-                {% when 'work' %}
+                {% when 'experiences' %}
                   {% include resume/work.liquid %}
                 {% comment %} {% when 'volunteer' %}
                   {% include resume/volunteer.liquid %} {% endcomment %}
