--- a/_layouts/post.liquid
+++ b/_layouts/post.liquid
@@ -19,7 +19,7 @@ layout: default
   <header class="post-header">
     <h1 class="post-title">{{ page.title }}</h1>
     <p class="post-meta">
-      {{ page.date | date: '%B %d, %Y' }}
+      {{ page.date | date: '%Y/%m/%d' }}
       {% if page.author %}• {{ page.author }}{% endif %}
       {% if page.meta %}• {{ page.meta }}{% endif %}
     </p>
