--- a/_layouts/bib.liquid
+++ b/_layouts/bib.liquid
@@ -209,7 +209,11 @@
         {% endif %}
       {% endif %}
       {% if entry.video %}
-        <a class="abstract btn btn-sm z-depth-0" role="button">Video</a>
+        {% if entry.video contains '://' %}
+          <a href="{{ entry.video }}" class="btn btn-sm z-depth-0" role="button">Video</a>
+        {% else %}
+          <a href="{{ entry.video | prepend: '/assets/pdf/' | relative_url }}" class="btn btn-sm z-depth-0" role="button">Video</a>
+        {% endif %}
       {% endif %}
       {% if entry.blog %}
         <a href="{{ entry.blog }}" class="btn btn-sm z-depth-0" role="button">Blog</a>
